Resolucion errores algoritmo y jugar despues de crear